# templeos-loader

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bin2elf.py  datetime.c  datetime.h  disassemble-holycrt.sh  disassemble-templeos.sh  elf64-x86-64.ld  hfs.c  hfs.h  host.c  host.h  load_kernel.c  load_kernel.h  loader.c  main.c  mainstatic.c  make-holycrt-s.sh  make-holycrt.sh  memory_map.c  memory_map.h  remake-holycrt.sh  symtable.c  symtable.h  templeos-loader.h  templeos.h  thunk.h  vfs.c  vfs.h  vsyscall.c  vsyscall.h
.github/: ci-build.sh
.github/workflows/: cmake.yml
HolyCRT/: CmpHolyCRT.HC  CompilerExportDefs.HH  CompilerImportDefs.HH  Display.HC  ExportDefs.HH  HolyCRT.PRJ  HostApi.HH  ImportDefs.HH  InitRuntime.HC  KCfg.HC  KDate.HC  KDbg.HC  KDefine.HC  KExcept.HC  KInts.HC  KLoad.HC  KMisc.HC  KUtils.HC  Kernel.PRJ  KeyDev.HC  MultiProc.HC  Sched.HC  VKMain.HC  VKStart64.HC  VKernel.HH  VSysCall.HC
HolyCRT/BlkDev/: DskATA.HC  DskAddDev.HC  DskCFile.HC  DskCopy.HC  DskDirA.HC  DskDirB.HC  DskDrv.HC  DskFile.HC  DskFind.HC  DskStrB.HC  FileSysHostFS.HC  FileSysHostFSFwd.HC  MakeBlkDev.HC
HolyCRT/Mem/: BlkPool.HC  MemPhysical.HC
HolyCRT/SerialDev/: Keyboard.HC  Message.HC
MiniSystem/: AdamInit.HC
MiniSystem/Kernel/: KernelA.HH
patched_make_files/musl-src/: Makefile
patched_make_files/physfs-3.0.2/: CMakeLists.txt
patched_make_files/templeos-loader/: CMakeLists.txt
scripts/: make-holycrt.sh
